update: 加密sdk版本适配1.6